@@ -1,6 +1,6 @@
-#! /usr/bin/env python3
-
 """Token constants (from "token.h")."""
+
+__all__ = ['tok_name', 'ISTERMINAL', 'ISNONTERMINAL', 'ISEOF']
 
 #  This file is automatically generated; please don't muck it up!
 #
@@ -68,12 +68,10 @@ N_TOKENS = 55
 NT_OFFSET = 256
 #--end constants--
 
-tok_name = {}
-for _name, _value in list(globals().items()):
-    if type(_value) is type(0):
-        tok_name[_value] = _name
-del _name, _value
-
+tok_name = {value: name
+            for name, value in globals().items()
+            if isinstance(value, int)}
+__all__.extend(tok_name.values())
 
 def ISTERMINAL(x):
     return x < NT_OFFSET
@@ -85,7 +83,7 @@ def ISEOF(x):
     return x == ENDMARKER
 
 
-def main():
+def _main():
     import re
     import sys
     args = sys.argv[1:]
@@ -139,4 +137,4 @@ def main():
 
 
 if __name__ == "__main__":
-    main()
+    _main()
